--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta charset="utf-8">
   <title>Hembalon</title>
   <meta
-      content="Hembalon servis horkovzdušných balónů"
+      content="Svěřte nám své balóny a my se postaráme, aby bylo vše v pořádku. Pravidelná údržba, roční prohlídky,
+        uvolnění do provozu, kontrola letové způsobilosti, vše zařídíme.
+        Dle vašich požadavků můžeme nadstandardně ošetřit váš koš, brašny i hořáky, že budou zase jako nové.
+        V případě potřeby rádi uděláme pravidelnou údržbu vašich přívěsných vozíků a ventilátorů.
+        Bezpečnost, spolehlivost a nadšení - to jsme my."
       name="description"
     />
   <meta content="width=device-width, initial-scale=1" name="viewport">
