--- a/index.html
+++ b/index.html
@@ -59,10 +59,7 @@
       data-duration="400"
     >
       <div class="spark-rounded-edge-nav-bar-inner">
-        <a
-          href="javascript: void(0)"
-          onclick="goto('hero')"
-          class="spark-brand-logo w-nav-brand"
+        <a href="#hero" class="spark-brand-logo w-nav-brand"
           ><img
             src="images/logo_hebalon-removebg-preview.png"
             loading="lazy"
@@ -854,11 +851,6 @@
         </div>
       </div>
     </div>
-    <script>
-      function goto(id) {
-        document.getElementById(id).scrollIntoView();
-      }
-    </script>
     <script
       src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=65ae37440fdaf0956bf93df5"
       type="text/javascript"
