--- a/en/home.html
+++ b/en/home.html
@@ -114,7 +114,7 @@
           <a href="#chci-nabidku" class="spark-nav-link spark-button w-nav-link"
             >I want an offer</a
           >
-          <a href="../index.html" class="social-link language w-inline-block"
+          <a href="../index" class="social-link language w-inline-block"
             ><img
               src="../images/czech-republic.png"
               loading="lazy"
