--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
           <a href="#chci-nabidku" class="spark-nav-link spark-button w-nav-link"
             >Chci nabídku</a
           >
-          <a href="en/home.html" class="social-link language w-inline-block"
+          <a href="en/home" class="social-link language w-inline-block"
             ><img
               src="images/united-kingdom.png"
               loading="lazy"
