--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
               />
               <div>
                 <div class="name-text-block">Marek Štosek</div>
-                <p class="paragraph-3">Údržba a servis</p>
+                <p class="paragraph-3">Údržba - servis</p>
               </div>
             </a>
           </div>
