--- a/index.html
+++ b/index.html
@@ -386,7 +386,13 @@
     </section>
     <section id="nas-tym" class="section-2 tym">
       <div class="w-layout-blockcontainer container w-container">
-        <h2 class="heading-2">Náš tým</h2>
+        <h2
+          class="heading-2"
+          data-w-id="14c24e08-a2ef-fb52-775d-2e2974dbad33"
+          style="opacity: 0"
+        >
+          Náš tým
+        </h2>
         <div
           id="w-node-_9a92843c-d2e1-32a6-4823-9766b35af2c8-a18b198c"
           data-w-id="9a92843c-d2e1-32a6-4823-9766b35af2c8"
@@ -489,7 +495,7 @@
               />
               <div>
                 <div class="name-text-block">Marek Štosek</div>
-                <p class="paragraph-3">Údržba - servis</p>
+                <p class="paragraph-3">Údržba a servis</p>
               </div>
             </a>
           </div>
