--- a/en/home.html
+++ b/en/home.html
@@ -85,12 +85,12 @@
           role="navigation"
           class="spark-nav-menu spark-rounded-corners w-nav-menu"
         >
-          <a href="#nase-sluzby" class="spark-nav-link w-nav-link"
+          <a href="#our-services" class="spark-nav-link w-nav-link"
             >Our services</a
           >
-          <a href="#nas-pribeh" class="spark-nav-link w-nav-link">Our story</a>
-          <a href="#nas-tym" class="spark-nav-link w-nav-link">Who are we</a>
-          <a href="#kontakt" class="spark-nav-link w-nav-link">Contact</a>
+          <a href="#our-story" class="spark-nav-link w-nav-link">Our story</a>
+          <a href="#who-are-we" class="spark-nav-link w-nav-link">Who are we</a>
+          <a href="#contact" class="spark-nav-link w-nav-link">Contact</a>
           <a
             href="https://www.instagram.com/hembalon_service"
             target="_blank"
@@ -111,10 +111,10 @@
               alt=""
               class="social-image"
           /></a>
-          <a href="#chci-nabidku" class="spark-nav-link spark-button w-nav-link"
+          <a href="#i-want-offer" class="spark-nav-link spark-button w-nav-link"
             >I want an offer</a
           >
-          <a href="https://balloonservice.cz/" class="social-link language w-inline-block"
+          <a href="../index" class="social-link language w-inline-block"
             ><img
               src="../images/czech-republic.png"
               loading="lazy"
@@ -138,7 +138,7 @@
     >
       <h1 class="heading-hero">Hembalon service for safe flights</h1>
     </div>
-    <section id="nase-sluzby" class="section">
+    <section id="our-services" class="section">
       <div class="w-layout-blockcontainer container w-container">
         <div
           data-w-id="c36877df-b6f3-ac30-8365-70b964fdc074"
@@ -205,7 +205,7 @@
         </div>
       </div>
     </section>
-    <section id="nas-pribeh" class="section-2 o-nas">
+    <section id="our-story" class="section-2 o-nas">
       <div class="w-layout-blockcontainer container w-container">
         <h2
           data-w-id="912cbfe1-abe7-2069-f22a-910b0aa9db97"
@@ -395,7 +395,7 @@
         </div>
       </div>
     </section>
-    <section id="nas-tym" class="section-2 tym">
+    <section id="who-are-we" class="section-2 tym">
       <div class="w-layout-blockcontainer container w-container">
         <h2 class="heading-2">Our team</h2>
         <div
@@ -507,7 +507,7 @@
         </div>
       </div>
     </section>
-    <section id="kontakt" class="section-2 flex">
+    <section id="contact" class="section-2 flex">
       <div class="w-layout-blockcontainer container w-container">
         <div
           data-w-id="3adbef4d-cace-89d9-b68c-4ce2975766c2"
@@ -601,7 +601,7 @@
         </div>
       </div>
     </section>
-    <section id="chci-nabidku" class="section-2 nabidka">
+    <section id="i-want-offer" class="section-2 nabidka">
       <div class="w-layout-blockcontainer container form w-container">
         <h2
           data-w-id="2baf3bb8-bc58-c9f4-f3e3-0fa62f8a0da3"
