--- a/en/home.html
+++ b/en/home.html
@@ -8,6 +8,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Home</title>
+     <meta
+      content="Entrust us with your balloons and we will make sure everything is in order. Regular maintenance, annual inspections,
+release to service, airworthiness checks, we'll take care of everything.
+According to your requirements, we can treat your basket, bags and burners to make them like new again.
+If necessary, we are happy to do regular maintenance on your trailers and fans.
+Safety, reliability and enthusiasm - that's us."
+      name="description"
+      lang="en"
+    />
     <meta content="Home" property="og:title" />
     <meta content="Home" property="twitter:title" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
