--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ Bezpečnost, spolehlivost a nadšení - to jsme my."
           <a href="#nas-tym" class="spark-nav-link w-nav-link">Kdo jsme</a>
           <a href="#kontakt" class="spark-nav-link w-nav-link">Kontakt</a>
           <a
-            href="https://www.instagram.com/hembalon_service"
+            href="https://www.instagram.com/hembalon.service"
             target="_blank"
             class="social-link w-inline-block"
             ><img
@@ -815,7 +815,7 @@ Bezpečnost, spolehlivost a nadšení - to jsme my."
           <div class="modal-text-block">Kuba</div>
           <p class="paragraph-4">
             si nás prostě našel a hned mezi nás zapadl.Je to nadšenec do všeho
-            co létá a po letech se rozhodl, ži udělá i papíry na balón.
+            co létá a po letech se rozhodl, že si udělá i papíry na balón.
             Momentálně je ve výcviku.Lahve a hořáky jsou mu vlastní, do šití se
             sice zatím moc nehrne, ale člověk nikdy neví.Podle něho musí mít vše
             jasný postup a řád, takže checklisty jsou jeho vášeň. Prostě
