--- a/en/home.html
+++ b/en/home.html
@@ -101,7 +101,7 @@ Safety, reliability and enthusiasm - that's us."
           <a href="#who-are-we" class="spark-nav-link w-nav-link">Who are we</a>
           <a href="#contact" class="spark-nav-link w-nav-link">Contact</a>
           <a
-            href="https://www.instagram.com/hembalon_service"
+            href="https://www.instagram.com/hembalon.service"
             target="_blank"
             class="social-link w-inline-block"
             ><img
@@ -247,7 +247,7 @@ Safety, reliability and enthusiasm - that's us."
           about us in Australia yet, but we&#x27;re in the heart of Europe,
           right next to the motorway, so we&#x27;re a short drive from
           everywhere. Safety, reliability and enthusiasm, that&#x27;s us! Come
-          and check it out! We look forward to seeing you!Service tým<br />
+          and check it out! We look forward to seeing you!Service team<br />
         </p>
         <div
           data-w-id="1e993a57-6064-5e1a-7850-8cd241e125ab"
@@ -604,7 +604,7 @@ Safety, reliability and enthusiasm - that's us."
           </a>
           <p class="paragraph-card cards">
             If we don&#x27;t pick it up right away, we&#x27;re sure to have
-            sewing machines or torches humming in our ears. But we&#x27;ll be
+            sewing machines or burners humming in our ears. But we&#x27;ll be
             sure to call you back as soon as we can.<br />
           </p>
         </div>
